# jucebouncer

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  jucebouncer.jucer
Builds/MacOSX/jucebouncer.xcodeproj/: project.pbxproj
Builds/MacOSX/jucebouncer.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Builds/MacOSX/jucebouncer.xcodeproj/project.xcworkspace/xcuserdata/bpartridge.xcuserdatad/: UserInterfaceState.xcuserstate
Builds/MacOSX/jucebouncer.xcodeproj/xcuserdata/bpartridge.xcuserdatad/xcschemes/: jucebouncer.xcscheme  xcschememanagement.plist
JuceLibraryCode/: AppConfig.h  JuceHeader.h
lib/: vst_enums.txt
plugins/FreeAlpha.vst/Contents/: Info.plist  PkgInfo
plugins/FreeAlpha.vst/Contents/MacOS/: FreeAlpha
plugins/FreeAlpha.vst/Contents/Resources/English.lproj/: InfoPlist.strings
plugins/FreeAlpha.vst/Contents/_CodeSignature/: CodeResources
plugins/Sylenth1Demo.vst/Contents/: Info.plist
plugins/Sylenth1Demo.vst/Contents/MacOS/: Sylenth1Demo
plugins/miniTERA.vst/Contents/Resources/: miniTERA.rsrc  miniTERAInfo.plist
plugins/miniTERA.vst/Contents/Resources/English.lproj/: InfoPlist.strings
public/: index.html
scripts/: client.py
src/: NonDeletingOutputStream.h  juce.cpp  main.cpp  presets.cpp  urlutils.h
